Closed Bug 1661975 Opened 5 years ago Closed 5 years ago

Fix "Print Selection Only" in the system print dialog when opened from the new print UI

Categories

(Toolkit :: Printing, defect, P1)

Firefox 82
Desktop
All
defect

Tracking

()

VERIFIED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox80 --- unaffected
firefox81 --- verified
firefox82 --- verified

People

(Reporter: 6dnail, Assigned: bobowen)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression, Whiteboard: [print2020_v81][old-ui-])

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:82.0) Gecko/20100101 Firefox/82.0

Steps to reproduce:

Selected a portion of a webpage
used File->print

Actual results:

I can print the whole thing or a specific page however, I cannot print the selected portion of a webpage.

This works on Firefox 80 however, it fails on Firefox 82 (Currently my Firefox nightly is at build 20200830093945). System is Ubuntu 16.04. It is also failing on Ubuntu 18.04

Expected results:

Somewhere in the print dialog, if necessary, within the 'print using the system dialog', it should be possible to print just a selection. Reference Firefox 80, which behaves correctly.

Page range "Selection" radio button is no longer enabled in System dialog on Windows10.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=3b208361444be5b6e5df2b2d2d80c05c901f534e&tochange=ec5d71be904568a05c1bfb81a4c1a28178d61d6b

Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Regressed by: 1587459
Has Regression Range: --- → yes
OS: Unspecified → All
Hardware: Unspecified → Desktop

oops sorry, wrong tracking flag

Component: Untriaged → Printing
Product: Firefox → Toolkit

Thanks for reporting this, Lee! And thanks for the regression range, Alice!

Blocks: 1631440
Priority: -- → P1
Whiteboard: [print2020_v81][old-ui-]
Assignee: nobody → jwatt
Status: NEW → ASSIGNED
Assignee: jwatt → bobowencode
Summary: Firefox nightly disabled print selection → Fix "Print Selection Only" in the system print dialog when opened from the new print UI

This is then used in the front end to set the option in the settings.

Pushed by jwatt@jwatt.org: https://hg.mozilla.org/integration/autoland/rev/3dceff8392d1 Add whether we have a selection to PrintPreviewResultInfo. r=jwatt

Hi Mike, This bug doesn't have a severity set, could you please help?

Flags: needinfo?(mconley)

(I got this. 🙂)

Severity: -- → S3
Flags: needinfo?(mconley)
Pushed by jwatt@jwatt.org: https://hg.mozilla.org/integration/autoland/rev/22eeb213f761 part 2: Follow-up to fix nsPrintJob::FirePrintingErrorEvent. r=jwatt
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch

Comment on attachment 9173471 [details]
Bug 1661975: Add whether we have a selection to PrintPreviewResultInfo. r=jwatt!

Beta/Release Uplift Approval Request

  • User impact if declined: "Print selection only" will not be available from from the system print dialog when opened from the new print UI.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Very contained.
  • String changes made/needed:
Attachment #9173471 - Flags: approval-mozilla-beta?
Attachment #9173667 - Flags: approval-mozilla-beta?
Depends on: 1653319

Comment on attachment 9173471 [details]
Bug 1661975: Add whether we have a selection to PrintPreviewResultInfo. r=jwatt!

Approved for 81.0b6.

Attachment #9173471 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9173667 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]
Depends on: 1663137

Confirming this issue as verified fixed on macOS 10.15, Ubuntu 18.04 and Windows 10x64. Verified using 82.0a1 (2020-09-09) and 81.0b8.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

This cannot be verified on Ubuntu 16.04 because 1) bug 1662946 is not fixed - until that bug is fixed, it's not possible to see the print dialog and 2) as of last night's build 20200910093613, firefox crashes if print is selected (new bug coming shortly)

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: