Bug 1661975: Add whether we have a selection to PrintPreviewResultInfo. r=jwatt

This is then used in the front end to set the option in the settings.

Differential Revision: https://phabricator.services.mozilla.com/D89045