dom/ipc/BrowserChild.cpp
@@ -2244,7 +2244,7 @@ mozilla::ipc::IPCResult BrowserChild::RecvPrintPreview(
   // went wrong.
   auto sendCallbackError = MakeScopeExit([&] {
     if (aCallback) {
-      aCallback(PrintPreviewResultInfo(0, 0));  // signal error
+      aCallback(PrintPreviewResultInfo(0, 0, false));  // signal error
     }
   });
 
